[project]
requires-python = ">=3.9"
name = "NMRlipidsDatabank"
version = "1.3.0"
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
[tool.ruff]
target-version = "py39"
# Set the maximum line length to 120
line-length = 120
ignore = ["TD", "FIX002", 
          "TRY003",             # exception handling
          "D105", "D400",       # docstring style issues
          "PTH",                # until we migrate to Pathlib
          "T201", "G004", "S603"]       # logging currently ignored
[tool.ruff.lint]
select = ["ALL"]
extend-select = ["E501"]
[tool.ruff.lint.pydocstyle]
convention = "pep257"