[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "fooo"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
description = "TODO"
dynamic = ["version"]
keywords = [
    "Science",
    "Molecular Dynamics",
    "Membranes",
]
license = "GPL-3.0-or-later"
# maintainers = [] TODO
name = "DatabankLib"
readme = "README.md"
dependencies = [
    "buildh>=1.6.1",
    "MDAnalysis>=2.7.0",
    "maicos>=0.11.2,<0.12",
    "numpy>=2.0",
    "pandas>=2.0.0",
    "PyYAML>=6.0.0",
    "tqdm>=4.5.0",
    "periodictable>=1.5.0",
    "Deprecated",
    "scipy",
    "jsonschema",
]

[project.urls]
homepage = "https://databank.nmrlipids.fi"
documentation = "https://nmrlipids.github.io/index.html"
repository = "https://github.com/NMRLipids/Databank"
# changelog = ""
issues = "https://github.com/NMRLipids/Databank/issues"

[project.scripts]
lipiddb_add = "maicos.__main__:main"


[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "sim1: toy-databank for computing properties from scratch",
    "sim2: toy-databank with pre-computed properties for API tests",
    "adddata: for AddData.py standalone script testing",
    "nodata: test auxilary functions not related to Data",
]

[tool.ruff]
target-version = "py310"
# Set the maximum line length to 120
line-length = 120
exclude = ["src/DatabankLib/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
extend-select = ["E501"]
ignore = [
    "INP001",
    "B027",
    "PLC0415",
    "S101",
    "ANN001",
    "ANN201",
    "PT006",
    "TD",
    "FIX002", 
    "TRY003",  # exception handling
    "D105",
    "D400",  # docstring style issues
    "PTH",  # until we migrate to Pathlib
    "T201",
    "G004",
    "S603",  # logging currently ignored
    "S603",
    "S607",  # subprocess security issues
]

[tool.ruff.lint.per-file-ignores]
# TODO: check and renable these
"**/{tests}/*" = ["D", "E", "F", "B", "I"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.setuptools_scm]
version_file = "src/DatabankLib/_version.py"
